# mlops-m3

./: .gitignore  README.md
app/: client.html
dashboards/: data_drift.json
data/: month-11.csv  month-21.csv  month-22.csv  month-30.csv  month-31.csv  month-36.csv
datasets/insurance_prediction/: test.csv  train.csv
docs/: 2023-m3.html  bloecke.md  gloassar.md  glossar.md  plan.md  prinzipien.md  story.md  vorbereitung.md  zeitplan.md
drift_demo/: README.md  job.yaml
environment-repository/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
environment-repository/kind/: kustomization.yaml
insurance-prediction/: .dockerignore  .gitignore  Dockerfile  README.md  TASKS.md  base.Dockerfile  interactive.Dockerfile  model.h5  pyproject.toml
insurance-prediction-old/: pyproject.toml
insurance-prediction-old/app/: main.py
insurance-prediction-old/data/: month-1.csv  month-18.csv  month-23.csv  month-27.csv  month-29.csv  month-3.csv  month-34.csv  month-35.csv  month-6.csv  month-8.csv  month-9.csv  production.csv  reference.csv
insurance-prediction-old/modules/: TrainableInsuranceModel.py
insurance-prediction-old/notebooks/: .gitignore
insurance-prediction-old/scripts/: train.py
insurance-prediction/app/: .gitattributes  app.py  model_prediction.py
insurance-prediction/data/: month-10.csv  month-12.csv  month-13.csv  month-14.csv  month-15.csv  month-16.csv  month-17.csv  month-19.csv  month-2.csv  month-20.csv  month-24.csv  month-25.csv  month-26.csv  month-28.csv  month-32.csv  month-33.csv  month-4.csv  month-5.csv  month-7.csv
insurance-prediction/datasets/insurance/: reference.csv
insurance-prediction/docs/: architecture.excalidraw  notebooks.excalidraw
insurance-prediction/modules/: BaseLineClassifier.py  data.py  model.py
insurance-prediction/notebooks/: exploration.ipynb  train.ipynb
insurance-prediction/scripts/: Dockerfile  train.py
insurance-prediction/src/insurance_prediction/app/: main.py
insurance-prediction/src/insurance_prediction/app/application/: __init__.py  dto.py  mapper.py  router.py
insurance-prediction/src/insurance_prediction/app/usecase/: insurance.py
insurance-prediction/src/insurance_prediction/demo/: __init__.py  simulate_drift.py
insurance-prediction/src/insurance_prediction/model/: __init__.py  insurance.py  rule_based.py
insurance-prediction/src/insurance_prediction/model/domain/: insurance.py  mapper.py
insurance-prediction/src/insurance_prediction/monitoring/: __init__.py  data_drift.py
insurance-prediction/src/insurance_prediction/train/: __init__.py  main.py  train.py  validate.py
insurance-prediction/src/insurance_prediction/train/dataset/: __init__.py  insurance.py
insurance-prediction/src/insurance_prediction/train/evaluation/: __init__.py
insurance-prediction/src/insurance_prediction/train/model/: insurance.py
insurance-prediction/tests/: test_integration.py
modules/: InsuranceModel.py
notebooks/: exploration-tensorflow.ipynb  exploration.ipynb
platform/: kustomization.yaml  platform.yaml
platform-terraform/: evidently.tf  main.tf  observability-namespace.tf  prometheus-operator-values.yml  prometheus-operator.tf  terraform.tfvars
platform-terraform/cicd/: gitea-values.yml  gitea.tf  namespace.tf
platform-terraform/observability/: evidently.tf
platform/observability/: kustomization.yaml  observability.yaml
scripts/: example_run_request.py  validate.py
setup-kind/: README.md  kind-config.yml
terraform/cluster-infrastructure/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/platform/: main.tf  (+3 more)
(+77 files in other folders)
