[tool.poetry]
name = "insurance-prediction"
version = "0.1.0"
description = ""
authors = ["Yannick Habecker <yannick.habecker@openknowledge.de>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = { version = ">=2.11,<2.12", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = ">=2.11,<2.12", markers = "sys_platform == 'darwin'" }
fastapi = ">=0.92, < 0.93"
uvicorn = ">=0.21, < 0.22"

[tool.poetry.dev-dependencies]
pylint = ">= 2.17, < 3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
