[tool.poetry]
name = "insurance-prediction-app"
version = "0.1.0"
description = ""
authors = ["Yannick Habecker <yannick.habecker@openknowledge.de>"]
readme = "README.md"
packages = [
    {include = "insurance_prediction/model", from = "src"},
    {include = "insurance_prediction/app", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = { version = ">=2.11,<2.12", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = ">=2.11,<2.12", markers = "sys_platform == 'darwin'" } # TODO: check for m1
fastapi = ">=0.92, < 0.93"
uvicorn = ">=0.21, < 0.22"
StrEnum = ">=0.4, < 1.0"

[tool.poetry.dev-dependencies]
pylint = ">= 2.17, < 3.0.0"
pandas = ">= 1.5, < 1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insurance-prediction-train = 'insurance_prediction.train:main'
